5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1621_2926.log
== TEST (2019-04-01 19:26:55) 
-- CODE:
a = float(input("preco do acai:"))
b = float(input("preco das esfirras:"))
valor = a + b
print(round(total, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total, 2))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:37) 
-- CODE:
a = float(input("quantidade de acai,:")) 
b = float(input("quantidade de esfirras:"))
valor = a + b
print(round(total, 2, g))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total, 2, g))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:45) 
-- CODE:
a = float(input("quantidade de acai:")) 
b = float(input("quantidade de esfirras:"))
valor = a + b
print(round(total, 2, g))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total, 2, g))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:16) 
-- CODE:
a = float(input("quantidade de acai:")) 
b = float(input("quantidade de esfirras:"))
valor = 

print(round(total, 2, g))


-- ERROR:
File "XXXX", line 3
    valor = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:03) 
-- CODE:
a = float(input("quantidade de acai:")) 
b = float(input("quantidade de esfirras:"))
 


-- ERROR:
File "XXXX", line 3
    valor = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
